--- a/site/public/resources/css/style.css
+++ b/site/public/resources/css/style.css
@@ -1,29 +1,30 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  border: 1px solid #000;
-}
 
-li {
-  float: left;
-  border-right:1px solid #bbb;
-}
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    border: 1px solid #000;
+  }
 
-li:last-child {
-  border-right: none;
-}
+  li {
+    float: left;
+    /* border-right:1px solid #bbb; */
+  }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+  li:last-child {
+    border-right: none;
+  }
 
-li a:hover {
-  background-color: #111;
-}
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  li a:hover {
+    background-color: #111;
+  }
