--- a/site/public/resources/css/style.css
+++ b/site/public/resources/css/style.css
@@ -1,30 +1,53 @@
 
-  ul {
+/* Global styling */
+
+  body {
+    background-color: #707070;
+    margin:0;
+  }
+
+/* Navbar styling */
+
+  .navbar {
+    margin-bottom: 20px;
+  }
+
+  .navbar ul {
     list-style-type: none;
-    margin: 0;
+    margin-top:0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #700000;
     border: 1px solid #000;
   }
 
-  li {
+  .navbar li {
     float: left;
-    /* border-right:1px solid #bbb; */
+    /* border-right:1px solid #bbb; margin: -8px; */
   }
 
-  li:last-child {
+  .navbar li:last-child {
     border-right: none;
   }
 
-  li a {
+  .navbar li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 15px 15px;
     text-decoration: none;
   }
 
-  li a:hover {
+  .navbar li a:hover {
     background-color: #111;
+  }
+
+/* Content styling */
+
+  .content {
+    background-color: #ffffff;
+    padding-left:2%;
+    padding-right:2%;
+    padding-top:10px;
+    padding-bottom:20px;
   }
