--- a/site/public/resources/css/global_style.css
+++ b/site/public/resources/css/global_style.css
@@ -3,6 +3,6 @@
 
   body {
     font-family: Tahoma, Geneva, sans-serif;
-    background-color: #707070;
+    background-color: #db7365;
     margin:0;
   }
