added user page framework and links

--- a/site/public/resources/css/page_content.css
+++ b/site/public/resources/css/page_content.css
@@ -47,6 +47,10 @@
     font-size: 50px;
   }
 
+  .container a:visited {
+    color: black;
+  }
+
   .border {
     margin-top: 10px;
     width: 100%;
