--- a/site/public/resources/css/user_content.css
+++ b/site/public/resources/css/user_content.css
@@ -23,10 +23,48 @@
   }
 
   .submissions {
-    padding-left: 10px;
   }
 
   .user_details {
     padding-left: 10px;
     border-left: 1px solid #b2b2b2;
+  }
+
+  .submissions table {
+    width: 96%;
+    border-collapse: collapse;
+  }
+
+  .submissions td {
+    padding: 10px;
+    vertical-align: top;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .submissions td h1 {
+    margin-top: 10px;
+  }
+
+  .submissions tr:hover {
+    background-color: #e5e5e5;
+  }
+
+  .submission h2 {
+    margin-top: 0px;
+    margin-left: 10px;
+    display: inline;
+  }
+
+  .submission p {
+    margin-left: 10px;
+  }
+
+  .submission #upload_tag {
+    display: inline;
+    color: #505050;
+  }
+
+  .submission object {
+    width: 80px;
+    height: 80px;
   }
