--- a/site/public/resources/css/global_style.css
+++ b/site/public/resources/css/global_style.css
@@ -6,3 +6,14 @@
     background-color: #606060;
     margin:0;
   }
+
+  .content {
+    background-color: white;
+    padding:20px;
+  }
+
+  .border {
+    margin-top: 10px;
+    width: 100%;
+    border-bottom:1px solid #e2e2e2;
+  }
