--- a/site/public/resources/css/upload_content.css
+++ b/site/public/resources/css/upload_content.css
@@ -15,7 +15,7 @@
   .upload_form #upload_comment {
     margin-left: 20%;
     display: block;
-    color: grey;
+    color: blue;
     margin-top: 10px;
   }
 
