--- a/site/public/resources/css/upload_content.css
+++ b/site/public/resources/css/upload_content.css
@@ -1,22 +1,44 @@
 
 /* Content styling; used with upload.html for a submission form */
 
-  .upload_form #lab, .upload_form input {
+  .upload_form label, .upload_form input {
     vertical-align: top;
     margin-top: 10px;
     display: inline-block;
   }
 
-  .upload_form #lab {
+  .upload_form #t_map {
+    display: none;
+  }
+
+  .upload_form #t_config {
+    display: none;
+  }
+
+  .upload_form #t_model {
+    display: none;
+  }
+
+  .upload_form #t_other {
+    display: none;
+  }
+
+  .upload_form label {
     text-align: right;
     width: 20%;
   }
 
+  .upload_form #lab_cat {
+    display: inline-block;
+  }
+
   .upload_form #upload_comment {
     margin-left: 20%;
-    display: block;
     color: blue;
+    text-align: left;
+    width: 60%;
     margin-top: 10px;
+    display: block;
   }
 
   .upload_form input, .upload_form select, .upload_form textarea {
@@ -30,5 +52,6 @@
 
   .upload_form #but_submit {
     margin-left: 20%;
+    display: none;
     width: auto;
   }
