--- a/site/public/resources/css/account_handling.css
+++ b/site/public/resources/css/account_handling.css
@@ -1,23 +1,23 @@
 
 /* Content styling; used with login.html for a login form */
 
-  .account_form #lab {
+  #account_form #lab {
     vertical-align: top;
     margin-top: 10px;
     display: inline-block;
   }
 
-  .account_form #lab {
+  #account_form #lab {
     text-align: right;
     width: 20%;
   }
 
-  .account_form input {
+  #account_form input {
     width: 400px;
     margin-top: 10px;
   }
 
-  .account_form #but_login, .account_form #but_create_account{
+  #account_form #but_login, #account_form #but_create_account{
     margin-left: 20%;
     width: auto;
   }
@@ -26,10 +26,16 @@
     text-align: center;
   }
 
-  .account_form #taken_username {
+  #account_form #username_helper {
     margin-left: 20%;
     display: block;
-    color: grey;
+    color: blue;
     margin-top: 10px;
-    color: green;
+  }
+
+  #account_form #l_status {
+    margin-left: 20%;
+    display: block;
+    color: #505050;
+    margin-top: 10px;
   }
