--- a/site/public/resources/css/page_content.css
+++ b/site/public/resources/css/page_content.css
@@ -34,6 +34,24 @@
     color: black;
   }
 
+/* Fading animation; made with help from https://www.w3schools.com/howto/howto_js_slideshow.asp */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
 /* Comments styling; used with map.html for a comment section styling */
 
   .content #upload_tag {
